# vibe-code-scanner

./: .gitignore  README.md  pyproject.toml  scanner.example.toml
src/vibe_code_scanner/: __init__.py  chunking.py  cli.py  client.py  config.py  dedupe.py  defaults.py  discovery.py  models.py  parser.py  prompting.py  repo_source.py  reporting.py  research.py  scanner.py  scanner_research_prompt.txt  scanner_system_prompt.txt  tokenization.py  tracing.py
tests/: test_chunking.py  test_cli.py  test_client.py  test_config.py  test_dedupe.py  test_discovery.py  test_parser.py  test_prompting.py  test_repo_source.py  test_research.py  test_scanner.py  test_tokenization.py
