[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-code-scanner"
version = "0.1.0"
description = "AI-assisted repository code scanner for local OpenAI-compatible model endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
vibe-code-scanner = "vibe_code_scanner.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
